--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-css-only": "^0.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-vue": "^2.5.2",
     "vue": "^2.5.6",
     "vue-template-compiler": "^2.5.6"
