Modifying the power utilities to support more flexible hypothesis tests
This commit introduces the possibility to specify more flexible hypothesis tests
for each of the power utilities. The calculations used to default to the following:
H0: epsilon = 0 vs H1: epsilon != 0, with epsilon the difference in means between
treatment and control. Now, via the introduction of the `alternative` and `mu`
parameters, you can speficiy hypothesis tests such as:
 - (alternative='greater', mu=delta) => H0: epsilon <= delta vs epsilon > delta
 - (alternative='lower', mu=defta)   => H0: epsilon >= delta vs epsilon < delta
 - (mu=delta)                        => H0: epsilon = delta vs epsilon != delta

I also introduced several simplification for consistency:
   - Across all utilities I defaulted to using a normal approximation for
the test statistics (instead of the exact t-distribution). Indeed, `solveforsample_{T,G}test
was already making this assumption (by fixing the degrees of freedom to a large number)
so the simplification should make the utilities more consistent
   - In `solveforpower_Gtest` I opted for a test with unequal variances and didn't
fallback to the equal variance assumption when mu=0 (for simplicity)

There was also a mistake in `solveforeffectsize_Ttest` where we would return the square
of the correct value.

The commit also introduces a tentative test suite which is far from being exhaustive
but which should get us started. Specifically I test each utility by using their
output as parameters for simulated experiments. I then compare the observed power
obtained with the theoretical power doing an equivalence test with a 0.01 margin
(a two one-sided test). The margin is chosen so that the equivalence test has
adequate power (0.999) and false positive rate (0.001) without being computationally
prohibitive (30000 experiments, as given by -in R with the TOSTER library-:
ceiling(powerTOSTone.raw(alpha = 0.001, statistical_power = 0.999, sd = sqrt(0.8*0.2),
    low_eq

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Calculator to help define runtime for A/B Experiments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=development jest"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/bookingcom/powercalculator#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "jStat": "^1.7.1",
+    "jest": "^22.2.2",
+    "rands": "^1.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-css-only": "^0.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
