--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Calculator to help define runtime for A/B Experiments",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=development jest"
+    "test": "NODE_ENV=development jest",
+    "eslint": "npx eslint ./src --ext .js --ext .vue"
   },
   "repository": {
     "type": "git",
@@ -20,15 +21,20 @@
     "babel": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "eslint-plugin-vue": "^4.3.0",
     "jStat": "^1.7.1",
-    "jest": "^22.2.2",
+    "jest": "^22.4.2",
     "rands": "^1.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-css-only": "^0.2.0",
+    "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-vue": "^2.5.2",
     "vue": "^2.5.6",
-    "vue-template-compiler": "^2.5.6"
+    "vue-template-compiler": "^2.5.6",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
+    "regenerator-runtime": "^0.11.1"
   }
 }
