--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "powercalculator",
   "version": "1.0.0",
   "description": "Calculator to help define runtime for A/B Experiments",
-  "main": "index.js",
+  "main": "dist/powercalculator.js",
   "scripts": {
     "test": "NODE_ENV=development jest && npm run vue-check",
     "store": "NODE_ENV=development jest ./tests/store.test.js",
     "eslint": "npx eslint ./src --ext .js --ext .vue",
-    "vue-check": "npm run eslint && npm run store"
+    "vue-check": "npm run eslint && npm run store",
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "serve": "serve"
   },
   "repository": {
     "type": "git",
@@ -29,12 +32,14 @@
     "jstat": "^1.9.3",
     "rands": "^1.0.0",
     "regenerator-runtime": "^0.13.5",
+    "rollup": "^2.38.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^2.0.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-vue": "^5.1.9",
+    "serve": "^11.3.2",
     "vue": "^2.5.6",
     "vue-template-compiler": "^2.5.6",
     "vuex": "^3.0.1"
