--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/powercalculator.js",
   "scripts": {
     "test": "NODE_ENV=development jest && npm run vue-check",
+    "test:verifyMath": "NODE_ENV=development jest ./tests/verification.test.js",
     "store": "NODE_ENV=development jest ./tests/store.test.js",
     "eslint": "npx eslint ./src --ext .js --ext .vue",
     "vue-check": "npm run eslint && npm run store",
@@ -18,6 +19,7 @@
     "url": "git+https://github.com/bookingcom/powercalculator.git"
   },
   "author": "Marcelo Oliveira",
+  "contributors": ["Sebastian Sastoque", "Alberto Martinez de Murga"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bookingcom/powercalculator/issues"
@@ -26,13 +28,15 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.6.3",
+    "core-js": "^3.11.1",
     "cryptiles": "^4.1.3",
+    "csv": "^5.5.0",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.0.1",
     "jstat": "^1.9.3",
     "rands": "^1.0.0",
-    "regenerator-runtime": "^0.13.5",
+    "regenerator-runtime": "^0.13.7",
     "rollup": "^2.38.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^2.0.0",
@@ -46,6 +50,9 @@
     "vuex": "^3.0.1"
   },
   "jest": {
-    "testURL": "http://localhost/"
+    "testURL": "http://localhost/",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
